<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp">
        <TextView
                android:text="@string/textview"
                android:layout_width="match_parent"
                android:layout_height="37dp" android:id="@+id/hintLabel" android:gravity="center"
                android:layout_marginTop="8dp" android:layout_weight="1"/>
        <TextView
                android:text="@string/textview"
                android:layout_width="match_parent"
                android:layout_height="37dp" android:id="@+id/scoreLabel" android:gravity="center"
                android:layout_marginTop="8dp" android:layout_weight="1"/>
    </LinearLayout>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/number" android:hint="@string/podaj_liczb" android:textSize="24sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
    <Button
            android:text="@string/strzelaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/checkNumberButton"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/number"/>
    <Button
            android:text="@string/nowa_gra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/newGameButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/checkNumberButton"/>
    <Button
            android:text="@string/ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/rankingButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/newGameButton"/>
    <TextView
            android:text="@string/najlepszy_wynik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/totalScoreLabel"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rankingButton"/>
    <Button
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/logoutButton"
            tools:layout_editor_absoluteX="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>