<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical">
    <Button
            android:text="@string/powrot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/backButton" android:onClick="backToGame"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="40dp" android:minHeight="40dp" android:gravity="center_vertical"
                android:text="@string/nr"
                android:paddingLeft="10dp" android:textSize="18sp" android:textStyle="bold"
                android:paddingRight="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp" android:gravity="center_vertical" android:text="@string/indeks"
                android:paddingLeft="10dp" android:textSize="18sp" android:width="220dp" android:textStyle="bold"
                android:paddingRight="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp" android:gravity="center_vertical"
                android:text="@string/wynik"
                android:paddingLeft="10dp" android:textSize="18sp" android:textStyle="bold"
                android:paddingRight="10dp"/>
    </LinearLayout>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DBDBDB"/>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/ranking">
    </ListView>
</LinearLayout>